@@ -1,3 +1,12 @@
+2007-10-29  Murray Cumming,,,  <murrayc@murrayc.com>
+
+	* providers/postgres/gda-postgres-provider.c:
+	(gda_postgres_provider_open_connection),
+	(gda_postgres_provider_perform_operation):
+	Put single quotes around the user and password, as 
+	mentioned in the PQconnectdb() documentation, so that 
+	passwords can contain spaces. Bug #491171.
+
 2007-10-27  Vivien Malerba <malerba@gnome-db.org>
 
 	* libgda/sqlite/virtual/gda-vconnection-hub.c: when creating modification queries, use
